// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserList component should render the user list for empty user list and match snapshot. 1`] = `
<div>
  <div>
    No users available :)
  </div>
</div>
`;

exports[`UserList component should render the user list for one user and match snapshot. 1`] = `
<div>
  <div>
    <ul>
      <userlistelement-stub user="[object Object]"></userlistelement-stub>
    </ul>
  </div>
</div>
`;

exports[`UserList component should render the user list for two users and match snapshot. 1`] = `
<div>
  <div>
    <ul>
      <userlistelement-stub user="[object Object]"></userlistelement-stub>
      <userlistelement-stub user="[object Object]"></userlistelement-stub>
    </ul>
  </div>
</div>
`;
